--- a/src/components/transfer/Transfer.css
+++ b/src/components/transfer/Transfer.css
@@ -46,6 +46,7 @@
   .Transfer input[type="text"] {
     padding: 10px;
     margin: 0.5rem;
+    color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 80%;
@@ -75,4 +76,29 @@
     color: #333;
     margin-top: 1rem;
   }
+
+
+  .cardList {
+    display: flex;
+    overflow-x: auto;
+    padding: 16px;
+    gap: 16px;
+    scrollbar-width: thin;
+    scrollbar-color: #888 #eee;
+  }
+  
+  .cardList::-webkit-scrollbar {
+    height: 8px;
+  }
+  
+  .cardList::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+  }
+  
+  .cardList::-webkit-scrollbar-track {
+    background-color: #eee;
+    border-radius: 4px;
+  }
+  
   
